--- a/styles.css
+++ b/styles.css
@@ -82,4 +82,73 @@ form button:hover {
 
 .content {
     background-color: var(--lightblue);
+    display: grid;
+    grid-template-rows: auto 1fr;  
+    padding: 2em 3em; 
+    row-gap: 3em;
+    justify-items: center;
+}
+
+.head {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 2em;
+    font-family: var(--bodyfont);
+    font-size: 18px;
+}
+
+.head button {
+    align-self: flex-end;
+    padding: 1em 2em;
+    color: white;
+    background-color: #b63030;
+    border: solid 2px #b63030;
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
+.head button:hover {
+    cursor: pointer;
+    color: #b63030;
+    background: none;
+}
+/* 
+.display {
+    justify-self: baseline;
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(250px, 1fr));
+    align-items: start;
+    column-gap: 1em;
+    row-gap: 1em;
+} */
+
+.display {
+    /* justify-self: start; */
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    gap: 1em;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: #060026;
+    color: white;
+    box-shadow: 1px 1px 5px #060026;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    font-family: var(--bodyfont);
+    padding: 2em 2em;
+    border-radius: 20px;
+    min-width: 260px;
+    min-height: 300px;
+}
+
+.card:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
