--- a/styles.css
+++ b/styles.css
@@ -131,11 +131,13 @@ form button:hover {
     justify-content: center;
     align-items: center;
     gap: 2em;
-    font-family: var(--bodyfont);
     padding: 2em 2em;
     border-radius: 20px;
     min-width: 260px;
     min-height: 300px;
+    text-transform: uppercase;
+    font-family: var(--headfont);
+    letter-spacing: 1px;
 }
 
 .card svg {
